--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.movie-title{
+  height: 2.5em; /* Set a fixed height */
+  overflow: hidden; 
+  /* Hide overflow content */
+  text-overflow: ellipsis; 
+  /* Add ellipsis for long text */
+  white-space: nowrap;
+   /* Prevent wrapping */
+}
